adding scripts key

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "node bot.js"
+  },
   "dependencies": {
     "botkit": "^0.5.1",
     "kadfe-client": "https://github.com/kadnerdz/kadfe-client.git"
