undid my unholy experiments

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   },
   "dependencies": {
     "botkit": "^0.5.1",
-    "kadfe-client": "https://github.com/kadnerdz/kadfe-client.git",
-    "ws": "^2.2.1"
+    "kadfe-client": "https://github.com/kadnerdz/kadfe-client.git"
   }
 }
